--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     height: 100vh;
     background-color: var(--v-dark-blue);
     font-family: overpass;
+    overflow: hidden;
 }
 
 .sr-only{
